<resources>

    <string name="app_name">買い記ログ</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- about_this_function.xml -->
    <string name="new_log">ログを作成</string>
    <string name="show_log">ログを見る</string>
    <string name="new_log_about">ショッピングしたログを作成します。\r\n商品・お店情報等を入力してください。</string>
    <string name="show_log_about">これまで記録したログを見ます。\r\nまたFacebookに投稿することもできます。</string>
    <string name="create_log_about">各項目をタップして、\r\n購入商品情報を入力してください。</string>
    
    <!-- create_log_title.xml -->
    <string name="to_top">トップへ</string>
    <string name="createLogTitle">ログ作成</string>
    
    <!-- create_log.xml -->
    <string name="itemTitle">商品名</string>
    <string name="itemHint">ex.ジャケット</string>
    
    <string name="priceTitle">値段</string>
    <string name="priceHint">ex.9000</string>
    <string name="priceUnit">円</string>
    
    <string name="storeTitle">ショップ情報</string>
    <string name="storeName">ショップ:</string>
    <string name="storeNameHint">ex.Anドロイド</string>
    <string name="storeAddress">アドレス:</string>
    <string name="storeAddressHint">ex.福岡県福岡市</string>
    <string name="getStoreAddressLabel">アドレスから検索</string>
    
    <string name="pictureTitle">商品イメージ</string>
    <string name="getPicture">画像を取り込む</string>
    
    
    <string name="confirm">確認する</string>
    
    
    <string name="itemTab">商品情報</string>
    <string name="shopTab">ショップ情報</string>
</resources>