<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/priceTitle"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/priceTitle"
    	android:textSize="30sp"
		android:paddingTop="10dip"
		android:paddingBottom="10dip"
		android:drawablePadding="10dip"
		android:drawableLeft="@drawable/createlog_pencil_on"/>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		<EditText
		    android:id="@+id/itemPrice" 
	        android:layout_width="0dip"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dip"
	        android:hint="@string/priceHint" />
		<TextView 
		    android:text="@string/priceUnit"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
    </LinearLayout>
	<include layout="@layout/createlog_line"/>    
</LinearLayout>